update Equity-Hedge-Notebook and script files

--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -64,7 +64,7 @@
    "source": [
     "equity_bmk = 'SPTR'\n",
     "include_fi = False\n",
-    "strat_drop_list = ['99%/90% Put Spread']\n",
+    "strat_drop_list = ['Vortex','99%/90% Put Spread']\n",
     "returns = dm.get_equity_hedge_returns(equity_bmk, include_fi, strat_drop_list)"
    ]
   },
@@ -220,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "@interact\n",
