--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,11 +79,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "164d44bf161949a69c092fb9fa0bed55",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly', 'Quarterly', 'Y…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "freq_list = ['Daily', 'Weekly', 'Monthly','Quarterly', 'Yearly']\n",
     "@interact\n",
@@ -108,13 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strategy_name = 'Def Var'\n",
-    "filename = 'def_var_data.xlsx'\n",
-    "sheet_name = 'Daily Returns'\n",
-    "new_strategy = dm.get_new_strategy_returns_data(filename, sheet_name, strategy_name)\n",
-    "new_strategy_dict = dm.get_data_dict(new_strategy, data_type='returns')\n",
-    "returns = dm.merge_dicts(returns, new_strategy_dict)\n",
-    "new_strat = True"
+    "git "
    ]
   },
   {
@@ -126,9 +135,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "notional value (Billions) for SPTR: 19\n",
+      "notional value (Billions) for Down Var: 1\n",
+      "notional value (Billions) for VOLA: 1\n",
+      "notional value (Billions) for Dynamic Put Spread: 1\n",
+      "notional value (Billions) for VRR: 1\n",
+      "notional value (Billions) for GW Dispersion: 1\n",
+      "notional value (Billions) for Corr Hedge: .25\n",
+      "notional value (Billions) for Def Var: 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_21714_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >SPTR</th>        <th class=\"col_heading level0 col1\" >Down Var</th>        <th class=\"col_heading level0 col2\" >VOLA</th>        <th class=\"col_heading level0 col3\" >Dynamic Put Spread</th>        <th class=\"col_heading level0 col4\" >VRR</th>        <th class=\"col_heading level0 col5\" >GW Dispersion</th>        <th class=\"col_heading level0 col6\" >Corr Hedge</th>        <th class=\"col_heading level0 col7\" >Def Var</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_21714_level0_row0\" class=\"row_heading level0 row0\" >Notional Weights (Billions)</th>\n",
+       "                        <td id=\"T_21714_row0_col0\" class=\"data row0 col0\" >$19.00</td>\n",
+       "                        <td id=\"T_21714_row0_col1\" class=\"data row0 col1\" >$1.00</td>\n",
+       "                        <td id=\"T_21714_row0_col2\" class=\"data row0 col2\" >$1.00</td>\n",
+       "                        <td id=\"T_21714_row0_col3\" class=\"data row0 col3\" >$1.00</td>\n",
+       "                        <td id=\"T_21714_row0_col4\" class=\"data row0 col4\" >$1.00</td>\n",
+       "                        <td id=\"T_21714_row0_col5\" class=\"data row0 col5\" >$1.00</td>\n",
+       "                        <td id=\"T_21714_row0_col6\" class=\"data row0 col6\" >$0.25</td>\n",
+       "                        <td id=\"T_21714_row0_col7\" class=\"data row0 col7\" >$1.00</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_21714_level0_row1\" class=\"row_heading level0 row1\" >Percentage Weights</th>\n",
+       "                        <td id=\"T_21714_row1_col0\" class=\"data row1 col0\" >100.00%</td>\n",
+       "                        <td id=\"T_21714_row1_col1\" class=\"data row1 col1\" >5.26%</td>\n",
+       "                        <td id=\"T_21714_row1_col2\" class=\"data row1 col2\" >5.26%</td>\n",
+       "                        <td id=\"T_21714_row1_col3\" class=\"data row1 col3\" >5.26%</td>\n",
+       "                        <td id=\"T_21714_row1_col4\" class=\"data row1 col4\" >5.26%</td>\n",
+       "                        <td id=\"T_21714_row1_col5\" class=\"data row1 col5\" >5.26%</td>\n",
+       "                        <td id=\"T_21714_row1_col6\" class=\"data row1 col6\" >1.32%</td>\n",
+       "                        <td id=\"T_21714_row1_col7\" class=\"data row1 col7\" >5.26%</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_21714_level0_row2\" class=\"row_heading level0 row2\" >Strategy Weights</th>\n",
+       "                        <td id=\"T_21714_row2_col0\" class=\"data row2 col0\" >0.00%</td>\n",
+       "                        <td id=\"T_21714_row2_col1\" class=\"data row2 col1\" >16.00%</td>\n",
+       "                        <td id=\"T_21714_row2_col2\" class=\"data row2 col2\" >16.00%</td>\n",
+       "                        <td id=\"T_21714_row2_col3\" class=\"data row2 col3\" >16.00%</td>\n",
+       "                        <td id=\"T_21714_row2_col4\" class=\"data row2 col4\" >16.00%</td>\n",
+       "                        <td id=\"T_21714_row2_col5\" class=\"data row2 col5\" >16.00%</td>\n",
+       "                        <td id=\"T_21714_row2_col6\" class=\"data row2 col6\" >4.00%</td>\n",
+       "                        <td id=\"T_21714_row2_col7\" class=\"data row2 col7\" >16.00%</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x1df0c19a130>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#get notional weights\n",
     "notional_weights = dm.get_notional_weights(returns['Monthly'])\n",
@@ -140,12 +212,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute Correlations"
+    "# Compute Correlations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,9 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "461f9787adc14a058d95d0c93fa96d6a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly'), value='Daily')…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_correlations(frequency=corr_freq_list, weighted=weighted,\n",
@@ -195,9 +282,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "notional value (Billions) for SPTR: 19\n",
+      "notional value (Billions) for Down Var: 1\n",
+      "notional value (Billions) for VOLA: 1\n",
+      "notional value (Billions) for Dynamic Put Spread: 1\n",
+      "notional value (Billions) for VRR: 1\n",
+      "notional value (Billions) for GW Dispersion: 1\n",
+      "notional value (Billions) for Corr Hedge: .25\n",
+      "notional value (Billions) for Def Var: 1\n"
+     ]
+    }
+   ],
    "source": [
     "analytics_freq_list = ['Weekly', 'Monthly']\n",
     "analytics_dict = summary.get_analytics_data(returns,analytics_freq_list,weighted,notional_weights,include_fi,new_strat)"
@@ -219,11 +321,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5ef4975b23f44bbc9fd1964c4213e046",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Weekly', 'Monthly'), value='Weekly'), Dropdo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_analytics(frequency=analytics_freq_list, weighted=weighted, stats=['return_stats', 'hedge_metrics']):\n",
@@ -378,14 +495,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing Monthly Analytics...\n",
+      "Computing Weekly Analytics...\n",
+      "Computing Historical SellOffs...\n"
+     ]
+    }
+   ],
    "source": [
     "equity_hedge_report = 'equity_hedge_analysis_q12021'\n",
     "selloffs = True\n",
     "rp.get_equity_hedge_report(equity_hedge_report, returns, notional_weights, include_fi, new_strat, weighted[0], selloffs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -404,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
