--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,26 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "164d44bf161949a69c092fb9fa0bed55",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly', 'Quarterly', 'Y…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "freq_list = ['Daily', 'Weekly', 'Monthly','Quarterly', 'Yearly']\n",
     "@interact\n",
@@ -135,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,9 +131,9 @@
       "notional value (Billions) for Down Var: 1\n",
       "notional value (Billions) for VOLA: 1\n",
       "notional value (Billions) for Dynamic Put Spread: 1\n",
-      "notional value (Billions) for VRR: 1\n",
+      "notional value (Billions) for VRR: 11\n",
       "notional value (Billions) for GW Dispersion: 1\n",
-      "notional value (Billions) for Corr Hedge: .25\n",
+      "notional value (Billions) for Corr Hedge: 1\n",
       "notional value (Billions) for Def Var: 1\n"
      ]
     },
@@ -156,47 +141,47 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_21714_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >SPTR</th>        <th class=\"col_heading level0 col1\" >Down Var</th>        <th class=\"col_heading level0 col2\" >VOLA</th>        <th class=\"col_heading level0 col3\" >Dynamic Put Spread</th>        <th class=\"col_heading level0 col4\" >VRR</th>        <th class=\"col_heading level0 col5\" >GW Dispersion</th>        <th class=\"col_heading level0 col6\" >Corr Hedge</th>        <th class=\"col_heading level0 col7\" >Def Var</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_7ec99_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >SPTR</th>        <th class=\"col_heading level0 col1\" >Down Var</th>        <th class=\"col_heading level0 col2\" >VOLA</th>        <th class=\"col_heading level0 col3\" >Dynamic Put Spread</th>        <th class=\"col_heading level0 col4\" >VRR</th>        <th class=\"col_heading level0 col5\" >GW Dispersion</th>        <th class=\"col_heading level0 col6\" >Corr Hedge</th>        <th class=\"col_heading level0 col7\" >Def Var</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_21714_level0_row0\" class=\"row_heading level0 row0\" >Notional Weights (Billions)</th>\n",
-       "                        <td id=\"T_21714_row0_col0\" class=\"data row0 col0\" >$19.00</td>\n",
-       "                        <td id=\"T_21714_row0_col1\" class=\"data row0 col1\" >$1.00</td>\n",
-       "                        <td id=\"T_21714_row0_col2\" class=\"data row0 col2\" >$1.00</td>\n",
-       "                        <td id=\"T_21714_row0_col3\" class=\"data row0 col3\" >$1.00</td>\n",
-       "                        <td id=\"T_21714_row0_col4\" class=\"data row0 col4\" >$1.00</td>\n",
-       "                        <td id=\"T_21714_row0_col5\" class=\"data row0 col5\" >$1.00</td>\n",
-       "                        <td id=\"T_21714_row0_col6\" class=\"data row0 col6\" >$0.25</td>\n",
-       "                        <td id=\"T_21714_row0_col7\" class=\"data row0 col7\" >$1.00</td>\n",
+       "                        <th id=\"T_7ec99_level0_row0\" class=\"row_heading level0 row0\" >Notional Weights (Billions)</th>\n",
+       "                        <td id=\"T_7ec99_row0_col0\" class=\"data row0 col0\" >$19.00</td>\n",
+       "                        <td id=\"T_7ec99_row0_col1\" class=\"data row0 col1\" >$1.00</td>\n",
+       "                        <td id=\"T_7ec99_row0_col2\" class=\"data row0 col2\" >$1.00</td>\n",
+       "                        <td id=\"T_7ec99_row0_col3\" class=\"data row0 col3\" >$1.00</td>\n",
+       "                        <td id=\"T_7ec99_row0_col4\" class=\"data row0 col4\" >$11.00</td>\n",
+       "                        <td id=\"T_7ec99_row0_col5\" class=\"data row0 col5\" >$1.00</td>\n",
+       "                        <td id=\"T_7ec99_row0_col6\" class=\"data row0 col6\" >$1.00</td>\n",
+       "                        <td id=\"T_7ec99_row0_col7\" class=\"data row0 col7\" >$1.00</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_21714_level0_row1\" class=\"row_heading level0 row1\" >Percentage Weights</th>\n",
-       "                        <td id=\"T_21714_row1_col0\" class=\"data row1 col0\" >100.00%</td>\n",
-       "                        <td id=\"T_21714_row1_col1\" class=\"data row1 col1\" >5.26%</td>\n",
-       "                        <td id=\"T_21714_row1_col2\" class=\"data row1 col2\" >5.26%</td>\n",
-       "                        <td id=\"T_21714_row1_col3\" class=\"data row1 col3\" >5.26%</td>\n",
-       "                        <td id=\"T_21714_row1_col4\" class=\"data row1 col4\" >5.26%</td>\n",
-       "                        <td id=\"T_21714_row1_col5\" class=\"data row1 col5\" >5.26%</td>\n",
-       "                        <td id=\"T_21714_row1_col6\" class=\"data row1 col6\" >1.32%</td>\n",
-       "                        <td id=\"T_21714_row1_col7\" class=\"data row1 col7\" >5.26%</td>\n",
+       "                        <th id=\"T_7ec99_level0_row1\" class=\"row_heading level0 row1\" >Percentage Weights</th>\n",
+       "                        <td id=\"T_7ec99_row1_col0\" class=\"data row1 col0\" >100.00%</td>\n",
+       "                        <td id=\"T_7ec99_row1_col1\" class=\"data row1 col1\" >5.26%</td>\n",
+       "                        <td id=\"T_7ec99_row1_col2\" class=\"data row1 col2\" >5.26%</td>\n",
+       "                        <td id=\"T_7ec99_row1_col3\" class=\"data row1 col3\" >5.26%</td>\n",
+       "                        <td id=\"T_7ec99_row1_col4\" class=\"data row1 col4\" >57.89%</td>\n",
+       "                        <td id=\"T_7ec99_row1_col5\" class=\"data row1 col5\" >5.26%</td>\n",
+       "                        <td id=\"T_7ec99_row1_col6\" class=\"data row1 col6\" >5.26%</td>\n",
+       "                        <td id=\"T_7ec99_row1_col7\" class=\"data row1 col7\" >5.26%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_21714_level0_row2\" class=\"row_heading level0 row2\" >Strategy Weights</th>\n",
-       "                        <td id=\"T_21714_row2_col0\" class=\"data row2 col0\" >0.00%</td>\n",
-       "                        <td id=\"T_21714_row2_col1\" class=\"data row2 col1\" >16.00%</td>\n",
-       "                        <td id=\"T_21714_row2_col2\" class=\"data row2 col2\" >16.00%</td>\n",
-       "                        <td id=\"T_21714_row2_col3\" class=\"data row2 col3\" >16.00%</td>\n",
-       "                        <td id=\"T_21714_row2_col4\" class=\"data row2 col4\" >16.00%</td>\n",
-       "                        <td id=\"T_21714_row2_col5\" class=\"data row2 col5\" >16.00%</td>\n",
-       "                        <td id=\"T_21714_row2_col6\" class=\"data row2 col6\" >4.00%</td>\n",
-       "                        <td id=\"T_21714_row2_col7\" class=\"data row2 col7\" >16.00%</td>\n",
+       "                        <th id=\"T_7ec99_level0_row2\" class=\"row_heading level0 row2\" >Strategy Weights</th>\n",
+       "                        <td id=\"T_7ec99_row2_col0\" class=\"data row2 col0\" >0.00%</td>\n",
+       "                        <td id=\"T_7ec99_row2_col1\" class=\"data row2 col1\" >5.88%</td>\n",
+       "                        <td id=\"T_7ec99_row2_col2\" class=\"data row2 col2\" >5.88%</td>\n",
+       "                        <td id=\"T_7ec99_row2_col3\" class=\"data row2 col3\" >5.88%</td>\n",
+       "                        <td id=\"T_7ec99_row2_col4\" class=\"data row2 col4\" >64.71%</td>\n",
+       "                        <td id=\"T_7ec99_row2_col5\" class=\"data row2 col5\" >5.88%</td>\n",
+       "                        <td id=\"T_7ec99_row2_col6\" class=\"data row2 col6\" >5.88%</td>\n",
+       "                        <td id=\"T_7ec99_row2_col7\" class=\"data row2 col7\" >5.88%</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1df0c19a130>"
+       "<pandas.io.formats.style.Styler at 0x219ac4d8880>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,24 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "461f9787adc14a058d95d0c93fa96d6a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly'), value='Daily')…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@interact\n",
     "def display_correlations(frequency=corr_freq_list, weighted=weighted,\n",
@@ -282,28 +252,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "notional value (Billions) for SPTR: 19\n",
-      "notional value (Billions) for Down Var: 1\n",
-      "notional value (Billions) for VOLA: 1\n",
-      "notional value (Billions) for Dynamic Put Spread: 1\n",
-      "notional value (Billions) for VRR: 1\n",
-      "notional value (Billions) for GW Dispersion: 1\n",
-      "notional value (Billions) for Corr Hedge: .25\n",
-      "notional value (Billions) for Def Var: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "analytics_freq_list = ['Weekly', 'Monthly']\n",
     "analytics_dict = summary.get_analytics_data(returns,analytics_freq_list,weighted,notional_weights,include_fi,new_strat)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analytics_dict['Weekly']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -321,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -329,7 +300,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ef4975b23f44bbc9fd1964c4213e046",
+       "model_id": "01f7af6081544b589388e76647bbfe09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -495,19 +466,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing Monthly Analytics...\n",
-      "Computing Weekly Analytics...\n",
-      "Computing Historical SellOffs...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "equity_hedge_report = 'equity_hedge_analysis_q12021'\n",
     "selloffs = True\n",
