--- a/Equity-Hedge-Notebook.ipynb
+++ b/Equity-Hedge-Notebook.ipynb
@@ -79,11 +79,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "640c1f8655a542f6a268affad15dc9d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly', 'Quarterly', 'Y…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "freq_list = ['Daily', 'Weekly', 'Monthly','Quarterly', 'Yearly']\n",
     "@interact\n",
@@ -120,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,9 +146,9 @@
       "notional value (Billions) for Down Var: 1\n",
       "notional value (Billions) for VOLA: 1\n",
       "notional value (Billions) for Dynamic Put Spread: 1\n",
-      "notional value (Billions) for VRR: 11\n",
+      "notional value (Billions) for VRR: 1\n",
       "notional value (Billions) for GW Dispersion: 1\n",
-      "notional value (Billions) for Corr Hedge: 1\n",
+      "notional value (Billions) for Corr Hedge: .25\n",
       "notional value (Billions) for Def Var: 1\n"
      ]
     },
@@ -141,47 +156,47 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_7ec99_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >SPTR</th>        <th class=\"col_heading level0 col1\" >Down Var</th>        <th class=\"col_heading level0 col2\" >VOLA</th>        <th class=\"col_heading level0 col3\" >Dynamic Put Spread</th>        <th class=\"col_heading level0 col4\" >VRR</th>        <th class=\"col_heading level0 col5\" >GW Dispersion</th>        <th class=\"col_heading level0 col6\" >Corr Hedge</th>        <th class=\"col_heading level0 col7\" >Def Var</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_45f63_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >SPTR</th>        <th class=\"col_heading level0 col1\" >Down Var</th>        <th class=\"col_heading level0 col2\" >VOLA</th>        <th class=\"col_heading level0 col3\" >Dynamic Put Spread</th>        <th class=\"col_heading level0 col4\" >VRR</th>        <th class=\"col_heading level0 col5\" >GW Dispersion</th>        <th class=\"col_heading level0 col6\" >Corr Hedge</th>        <th class=\"col_heading level0 col7\" >Def Var</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_7ec99_level0_row0\" class=\"row_heading level0 row0\" >Notional Weights (Billions)</th>\n",
-       "                        <td id=\"T_7ec99_row0_col0\" class=\"data row0 col0\" >$19.00</td>\n",
-       "                        <td id=\"T_7ec99_row0_col1\" class=\"data row0 col1\" >$1.00</td>\n",
-       "                        <td id=\"T_7ec99_row0_col2\" class=\"data row0 col2\" >$1.00</td>\n",
-       "                        <td id=\"T_7ec99_row0_col3\" class=\"data row0 col3\" >$1.00</td>\n",
-       "                        <td id=\"T_7ec99_row0_col4\" class=\"data row0 col4\" >$11.00</td>\n",
-       "                        <td id=\"T_7ec99_row0_col5\" class=\"data row0 col5\" >$1.00</td>\n",
-       "                        <td id=\"T_7ec99_row0_col6\" class=\"data row0 col6\" >$1.00</td>\n",
-       "                        <td id=\"T_7ec99_row0_col7\" class=\"data row0 col7\" >$1.00</td>\n",
+       "                        <th id=\"T_45f63_level0_row0\" class=\"row_heading level0 row0\" >Notional Weights (Billions)</th>\n",
+       "                        <td id=\"T_45f63_row0_col0\" class=\"data row0 col0\" >$19.00</td>\n",
+       "                        <td id=\"T_45f63_row0_col1\" class=\"data row0 col1\" >$1.00</td>\n",
+       "                        <td id=\"T_45f63_row0_col2\" class=\"data row0 col2\" >$1.00</td>\n",
+       "                        <td id=\"T_45f63_row0_col3\" class=\"data row0 col3\" >$1.00</td>\n",
+       "                        <td id=\"T_45f63_row0_col4\" class=\"data row0 col4\" >$1.00</td>\n",
+       "                        <td id=\"T_45f63_row0_col5\" class=\"data row0 col5\" >$1.00</td>\n",
+       "                        <td id=\"T_45f63_row0_col6\" class=\"data row0 col6\" >$0.25</td>\n",
+       "                        <td id=\"T_45f63_row0_col7\" class=\"data row0 col7\" >$1.00</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_7ec99_level0_row1\" class=\"row_heading level0 row1\" >Percentage Weights</th>\n",
-       "                        <td id=\"T_7ec99_row1_col0\" class=\"data row1 col0\" >100.00%</td>\n",
-       "                        <td id=\"T_7ec99_row1_col1\" class=\"data row1 col1\" >5.26%</td>\n",
-       "                        <td id=\"T_7ec99_row1_col2\" class=\"data row1 col2\" >5.26%</td>\n",
-       "                        <td id=\"T_7ec99_row1_col3\" class=\"data row1 col3\" >5.26%</td>\n",
-       "                        <td id=\"T_7ec99_row1_col4\" class=\"data row1 col4\" >57.89%</td>\n",
-       "                        <td id=\"T_7ec99_row1_col5\" class=\"data row1 col5\" >5.26%</td>\n",
-       "                        <td id=\"T_7ec99_row1_col6\" class=\"data row1 col6\" >5.26%</td>\n",
-       "                        <td id=\"T_7ec99_row1_col7\" class=\"data row1 col7\" >5.26%</td>\n",
+       "                        <th id=\"T_45f63_level0_row1\" class=\"row_heading level0 row1\" >Percentage Weights</th>\n",
+       "                        <td id=\"T_45f63_row1_col0\" class=\"data row1 col0\" >100.00%</td>\n",
+       "                        <td id=\"T_45f63_row1_col1\" class=\"data row1 col1\" >5.26%</td>\n",
+       "                        <td id=\"T_45f63_row1_col2\" class=\"data row1 col2\" >5.26%</td>\n",
+       "                        <td id=\"T_45f63_row1_col3\" class=\"data row1 col3\" >5.26%</td>\n",
+       "                        <td id=\"T_45f63_row1_col4\" class=\"data row1 col4\" >5.26%</td>\n",
+       "                        <td id=\"T_45f63_row1_col5\" class=\"data row1 col5\" >5.26%</td>\n",
+       "                        <td id=\"T_45f63_row1_col6\" class=\"data row1 col6\" >1.32%</td>\n",
+       "                        <td id=\"T_45f63_row1_col7\" class=\"data row1 col7\" >5.26%</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_7ec99_level0_row2\" class=\"row_heading level0 row2\" >Strategy Weights</th>\n",
-       "                        <td id=\"T_7ec99_row2_col0\" class=\"data row2 col0\" >0.00%</td>\n",
-       "                        <td id=\"T_7ec99_row2_col1\" class=\"data row2 col1\" >5.88%</td>\n",
-       "                        <td id=\"T_7ec99_row2_col2\" class=\"data row2 col2\" >5.88%</td>\n",
-       "                        <td id=\"T_7ec99_row2_col3\" class=\"data row2 col3\" >5.88%</td>\n",
-       "                        <td id=\"T_7ec99_row2_col4\" class=\"data row2 col4\" >64.71%</td>\n",
-       "                        <td id=\"T_7ec99_row2_col5\" class=\"data row2 col5\" >5.88%</td>\n",
-       "                        <td id=\"T_7ec99_row2_col6\" class=\"data row2 col6\" >5.88%</td>\n",
-       "                        <td id=\"T_7ec99_row2_col7\" class=\"data row2 col7\" >5.88%</td>\n",
+       "                        <th id=\"T_45f63_level0_row2\" class=\"row_heading level0 row2\" >Strategy Weights</th>\n",
+       "                        <td id=\"T_45f63_row2_col0\" class=\"data row2 col0\" >0.00%</td>\n",
+       "                        <td id=\"T_45f63_row2_col1\" class=\"data row2 col1\" >16.00%</td>\n",
+       "                        <td id=\"T_45f63_row2_col2\" class=\"data row2 col2\" >16.00%</td>\n",
+       "                        <td id=\"T_45f63_row2_col3\" class=\"data row2 col3\" >16.00%</td>\n",
+       "                        <td id=\"T_45f63_row2_col4\" class=\"data row2 col4\" >16.00%</td>\n",
+       "                        <td id=\"T_45f63_row2_col5\" class=\"data row2 col5\" >16.00%</td>\n",
+       "                        <td id=\"T_45f63_row2_col6\" class=\"data row2 col6\" >4.00%</td>\n",
+       "                        <td id=\"T_45f63_row2_col7\" class=\"data row2 col7\" >16.00%</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x219ac4d8880>"
+       "<pandas.io.formats.style.Styler at 0x1f10ea31820>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,9 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af764d24eeee498083ebc6e84d39f715",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly'), value='Daily')…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_correlations(frequency=corr_freq_list, weighted=weighted,\n",
@@ -252,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
