--- a/Strat-Report-Notebook.ipynb
+++ b/Strat-Report-Notebook.ipynb
@@ -35,7 +35,7 @@
     "from EquityHedging.reporting import formatter as fmt, plots\n",
     "from ipywidgets import interact, interact_manual\n",
     "from EquityHedging.reporting.excel import sheets\n",
-    "import os\n"
+    "import os"
    ]
   },
   {
@@ -112,12 +112,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "da2d9bc0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a7aa482ee1e4cc4a9d65f7d9857221b",
+       "model_id": "813d35c485f345558a92f85104aeffbb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,6 +145,104 @@
    "source": [
     "todo: show correlation chart, return strats, and hedge metrics"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d86e8299",
+   "metadata": {},
+   "source": [
+    "# Compute Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9fcacb16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_freq_list = ['Weekly', 'Monthly']\n",
+    "corr_dict = summary.get_corr_data(ret_strats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8281a3cb",
+   "metadata": {},
+   "source": [
+    "# Display Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f6129bbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2550a1a96af4eebbbc7ae62c6d83f1d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Weekly', 'Monthly'), value='Weekly'), Dropdo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def display_correlations(frequency=corr_freq_list,\n",
+    "                         corr=['corr', 'corr_down', 'corr_up'], plot_type=['heatmap', 'corrplot']):\n",
+    "    data = corr_dict[frequency]\n",
+    "    corr_df = data[False][corr][0]\n",
+    "    if plot_type == 'heatmap':\n",
+    "        return plots.draw_heatmap(corr_df, half=False)\n",
+    "    else:\n",
+    "        return plots.draw_corrplot(corr_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49402843",
+   "metadata": {},
+   "source": [
+    "# Create Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5fdd4a85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing Monthly Analytics...\n",
+      "Computing Weekly Analytics...\n",
+      "Computing Historical SellOffs...\n"
+     ]
+    }
+   ],
+   "source": [
+    "strat_report = 'Strat_Report'\n",
+    "selloffs = True\n",
+    "rp.generate_strat_report(strat_report, ret_strats, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d42c0d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
