--- a/Strat-Report-Notebook.ipynb
+++ b/Strat-Report-Notebook.ipynb
@@ -187,6 +187,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d86e8299",
+   "metadata": {},
+   "source": [
+    "# Compute Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fcacb16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_freq_list = ['Weekly', 'Monthly']\n",
+    "corr_dict = summary.get_corr_data(ret_data_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8281a3cb",
+   "metadata": {},
+   "source": [
+    "# Display Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6129bbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_correlations(frequency=corr_freq_list,\n",
+    "                         corr=['corr', 'corr_down', 'corr_up'], plot_type=['heatmap', 'corrplot']):\n",
+    "    data = corr_dict[frequency]\n",
+    "    corr_df = data[False][corr][0]\n",
+    "    if plot_type == 'heatmap':\n",
+    "        return plots.draw_heatmap(corr_df, half=False)\n",
+    "    else:\n",
+    "        return plots.draw_corrplot(corr_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "58fb69d2",
    "metadata": {},
    "source": [
@@ -272,51 +317,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d86e8299",
-   "metadata": {},
-   "source": [
-    "# Compute Correlations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fcacb16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corr_freq_list = ['Weekly', 'Monthly']\n",
-    "corr_dict = summary.get_corr_data(ret_strats)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8281a3cb",
-   "metadata": {},
-   "source": [
-    "# Display Correlations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6129bbb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@interact\n",
-    "def display_correlations(frequency=corr_freq_list,\n",
-    "                         corr=['corr', 'corr_down', 'corr_up'], plot_type=['heatmap', 'corrplot']):\n",
-    "    data = corr_dict[frequency]\n",
-    "    corr_df = data[False][corr][0]\n",
-    "    if plot_type == 'heatmap':\n",
-    "        return plots.draw_heatmap(corr_df, half=False)\n",
-    "    else:\n",
-    "        return plots.draw_corrplot(corr_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "49402843",
    "metadata": {},
    "source": [
@@ -332,7 +332,7 @@
    "source": [
     "strat_report = 'Strat_Report'\n",
     "selloffs = True\n",
-    "rp.generate_strat_report(strat_report, ret_strats, True)"
+    "rp.generate_strat_report(strat_report, ret_data_dict, selloffs)"
    ]
   },
   {
