Updated get_quintile_data function to now compute decile

--- a/Strat-Report-Notebook.ipynb
+++ b/Strat-Report-Notebook.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Strategy Report Notebook\n",
-    "This notebok runs analysis on the Strategy and Allocation Portfolio"
+    "This notebok runs analysis on a given strategy."
    ]
   },
   {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e52dff80",
    "metadata": {},
    "outputs": [],
@@ -43,20 +43,23 @@
    "id": "9badf88e",
    "metadata": {},
    "source": [
-    "## Compute Equity Hedge Returns for International Benchmark\n",
-    "To compute: Select an Equity Benchmark (**equity_bmk**):  SPTR, M1WD, SX5T\n",
-    "\n"
+    "## Import Daily, Weekly, Monthly, Quarterly and Yearly Returns Data for Equity Benchmark\n",
+    "\n",
+    "To import the returns data:\n",
+    "* Select an Equity Benchmark (**equity_bmk**):  SPTR, M1WD, SX5T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d2c31382",
    "metadata": {},
    "outputs": [],
    "source": [
     "equity_bmk = 'M1WD'\n",
-    "bmks = dm.get_equity_hedge_returns(equity_bmk, only_equity=True)\n"
+    "\n",
+    "#create returns data dictionary for equity benchmark\n",
+    "bmks_dict= dm.get_equity_hedge_returns(equity_bmk, only_equity=True)"
    ]
   },
   {
@@ -64,40 +67,28 @@
    "id": "64f341ec",
    "metadata": {},
    "source": [
-    "## Add a Strategy\n",
-    "Add File Name to \"io\" and the name of the sheet in \"sheet_name\" in **data=pd.read_excel(io= , sheet_name= )"
+    "## Import Daily, Weekly, Monthly, Quarterly and Yearly Returns Data for a Strategy\n",
+    "To import the returns data:\n",
+    "* In **new_data = get_new_strategy_returns_data( report_name= , sheet_name = ,index_col=0)**\n",
+    "    * Add File Name to **report_name** \n",
+    "    * Add sheet name to **sheet_name**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d18bdd5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "CWD = os.getcwd()\n",
-    "NEWSTRAT_DATA_FP = '\\\\EquityHedging\\\\data\\\\'\n",
-    "NEW_STRAT_DATA = CWD + NEWSTRAT_DATA_FP + 'new_strats'\n",
-    "data=pd.read_excel(io=\"Credit Suisse_SX5E_Tail_FSFVA_20210528_UPS Pension.xlsx\", sheet_name=\"data\",index_col=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83bfcc8f",
-   "metadata": {},
-   "source": [
-    "## Get Return Data of New Strategy and Merge with Benchmark"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "b9a07d7e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_dict=dm.get_data_dict(data,'index')\n",
-    "ret_strats=ret_strats=dm.merge_dicts(bmks, data_dict)"
+    "new_data= dm.get_new_strategy_returns_data( report_name = \"Credit Suisse_SX5E_Tail_FSFVA_20210528_UPS Pension.xlsx\", \n",
+    "                                           sheet_name = \"data\",index_col=0)\n",
+    "\n",
+    "#create returns data dictionary for strategy\n",
+    "new_data_dict = dm.get_data_dict(new_data,'index')\n",
+    "\n",
+    "#merge dictionaries\n",
+    "ret_data_dict = dm.merge_dicts(bmks_dict,new_data_dict)"
    ]
   },
   {
@@ -105,43 +96,170 @@
    "id": "c565ee24",
    "metadata": {},
    "source": [
-    "## View Returns Data"
+    "## View Returns Data\n",
+    "Select frequency (Daily, Weekly, Monthly, Yearly) to view data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "da2d9bc0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a7aa482ee1e4cc4a9d65f7d9857221b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly', 'Quarterly', 'Y…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "freq_list = ['Daily', 'Weekly', 'Monthly','Quarterly', 'Yearly']\n",
     "@interact\n",
     "def display_returns(frequency = freq_list):\n",
-    "    return fmt.get_returns_styler(ret_strats[frequency])"
+    "    return fmt.get_returns_styler(ret_data_dict[frequency])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a9770c60",
+   "id": "4d170a3e",
    "metadata": {},
    "source": [
-    "todo: show correlation chart, return strats, and hedge metrics"
+    "## Compute Return Stats and hedge Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a036ed1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analytics_freq_list = ['Weekly', 'Monthly']\n",
+    "analytics_dict = summary.get_analytics_data(ret_data_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3919f4be",
+   "metadata": {},
+   "source": [
+    "## Display Return Stats and Hedge Metrics\n",
+    "Display Returns Analytics data by:\n",
+    "* **frequency (Monthly or Weekly)** - Show Monthly or Weekly returns\n",
+    "* **stats (return_stats, hedge_metrics)** - Show:\n",
+    "    * Return Statistics or \n",
+    "    * Hedge Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f2b24ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_analytics(frequency=analytics_freq_list, stats=['return_stats', 'hedge_metrics']):\n",
+    "    data = analytics_dict[frequency]\n",
+    "    analytics = data[False]\n",
+    "    if stats == 'return_stats':\n",
+    "        return fmt.get_analytics_styler(analytics)\n",
+    "    if stats == 'hedge_metrics':\n",
+    "        if frequency == 'Weekly':\n",
+    "            return fmt.get_analytics_styler(analytics, stats, '1W')\n",
+    "        else:\n",
+    "            return fmt.get_analytics_styler(analytics, stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac053d69",
+   "metadata": {},
+   "source": [
+    "## Compute Historical Sell Offs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ec21519",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist_dict = summary.get_hist_data(ret_data_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19cd084d",
+   "metadata": {},
+   "source": [
+    "## Display Historical Sell Offs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "144485d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_selloffs():\n",
+    "    df_hist = hist_dict[False]\n",
+    "    return fmt.get_hist_styler(df_hist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "264776df",
+   "metadata": {},
+   "source": [
+    "## Compute Quantile Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26e41ed9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_list=['Quintile','Decile']\n",
+    "@interact\n",
+    "def display_returns(group = group_list):\n",
+    "    quintile_df = summary.get_grouped_data(ret_data_dict,[], False, group)\n",
+    "    return(quintile_df.style.format(\"{:.2%}\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba229c19",
+   "metadata": {},
+   "source": [
+    "## Display Quantile Analysis\n",
+    "Display Quintile Analysis Bar Chart:\n",
+    "* Compare strategies to the Equity Benchmark's returns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d7a97dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_list=['Quintile','Decile']\n",
+    "@interact\n",
+    "\n",
+    "def display_quintile_analysis(group = group_list, strat=list(ret_data_dict['Monthly'].select_dtypes('float').columns)[1:]):    \n",
+    "    df = summary.get_grouped_data(ret_data_dict, [], False, group)\n",
+    "    \n",
+    "    for col in df.columns:\n",
+    "        if not (col == equity_bmk or col ==strat):\n",
+    "            df.drop([col], axis=1, inplace=True)\n",
+    "    if group == \"Quintile\":\n",
+    "        title ='Quintile Analysis'\n",
+    "    else:\n",
+    "        title = 'Decile Analysis'\n",
+    "        \n",
+    "    fig = px.bar(df,barmode='group',title = title)\n",
+    "    fig.show()\n",
+    "    "
    ]
   }
  ],
