Get rid of repeating code blocks

--- a/Strat-Report-Notebook.ipynb
+++ b/Strat-Report-Notebook.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e52dff80",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e7ab7212",
    "metadata": {},
    "outputs": [],
@@ -69,20 +69,20 @@
    "source": [
     "## Import Daily, Weekly, Monthly, Quarterly and Yearly Returns Data for a Strategy\n",
     "To import the returns data:\n",
-    "* In **new_data = get_new_strategy_returns_data( report_name= , sheet_name = ,index_col=0)**\n",
+    "* In **new_data = get_new_strategy_returns_data( report_name= , sheet_name = )**\n",
     "    * Add File Name to **report_name** \n",
     "    * Add sheet name to **sheet_name**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d18bdd5b",
    "metadata": {},
    "outputs": [],
    "source": [
     "new_data= dm.get_new_strategy_returns_data( report_name = \"Credit Suisse_SX5E_Tail_FSFVA_20210528_UPS Pension.xlsx\", \n",
-    "                                           sheet_name = \"data\",index_col=0)\n",
+    "                                           sheet_name = \"data\")\n",
     "\n",
     "#create returns data dictionary for strategy\n",
     "new_data_dict = dm.get_data_dict(new_data,'index')\n",
@@ -102,10 +102,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "da2d9bc0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "205a5413c63140c0b5deea0bcda1e7e9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Daily', 'Weekly', 'Monthly', 'Quarterly', 'Y…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "freq_list = ['Daily', 'Weekly', 'Monthly','Quarterly', 'Yearly']\n",
     "@interact\n",
@@ -123,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0a036ed1",
    "metadata": {},
    "outputs": [],
@@ -147,54 +162,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f2b24ef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@interact\n",
-    "def display_returns(frequency = freq_list):\n",
-    "    return fmt.get_returns_styler(ret_data_dict[frequency])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e5df4b92",
-   "metadata": {},
-   "source": [
-    "## Compute Return Stats and Hedge Metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae5525c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "analytics_freq_list = ['Weekly', 'Monthly']\n",
-    "analytics_dict = summary.get_analytics_data(ret_data_dict)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f92dedf",
-   "metadata": {},
-   "source": [
-    "## Display Return Stats and Hedge Metrics\n",
-    "Display Returns Analytics data by:\n",
-    "* **frequency (Monthly or Weekly)** - Show Monthly or Weekly returns\n",
-    "* **stats (return_stats, hedge_metrics)** - Show:\n",
-    "    * Return Statistics or \n",
-    "    * Hedge Metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4b30dbb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f0b8f2434aa446582cd7759f1ba7af1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Weekly', 'Monthly'), value='Weekly'), Dropdo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_analytics(frequency=analytics_freq_list, stats=['return_stats', 'hedge_metrics']):\n",
@@ -219,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9fcacb16",
    "metadata": {},
    "outputs": [],
@@ -238,10 +224,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f6129bbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5f5b9f8ef3b54f93b1c1389424e873ba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Weekly', 'Monthly'), value='Weekly'), Dropdo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_correlations(frequency=corr_freq_list,\n",
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4926bf9d",
    "metadata": {},
    "outputs": [],
@@ -282,10 +283,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "4e6b0424",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f89db5fa28a2474b8ae3a209e295952e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Output(),), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_selloffs():\n",
@@ -303,10 +319,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "26e41ed9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e0c893ffe2934b239f057e7b2a0cbde1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='group', options=('Quintile', 'Decile'), value='Quintile'), Output(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "group_list=['Quintile','Decile']\n",
     "@interact\n",
@@ -327,10 +358,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7d7a97dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "908b5c16bc5c410bb24757be73ab9078",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='group', options=('Quintile', 'Decile'), value='Quintile'), Dropdow…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "group_list=['Quintile','Decile']\n",
     "@interact\n",
@@ -370,14 +416,6 @@
     "selloffs = True\n",
     "rp.generate_strat_report(strat_report, ret_data_dict, selloffs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d42c0d2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
